--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,13 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
-  width: 100%;
   height: 100vh;
   box-sizing: border-box;
 }
 
 .app {
-  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -20,7 +18,7 @@
 .menu {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 24px;
 }
 
 .game-container {
