--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,14 @@
   min-height: 400px;
   position: relative;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -40%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
